infrastructure/base/monitoring/stage-2/victoria-metrics/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: gateway
      namespace: cloudflare-gateway
  hostnames:
    - grafana${clusterServicesDNSSuffix,,}
  rules:
    - backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          port: 80
